@@ -7,7 +7,7 @@
 	<TemplateConfiguration>
 		<_Name>Console Project</_Name>
 		<Category>ILAsm</Category>
-		<Icon>C#.Project.DOSProject</Icon>
+		<Icon>res:ILAsm.Project.DOSProject</Icon>
 		<LanguageName>ILAsm</LanguageName>
 		<_Description>ILAsm Console Project</_Description>
 	</TemplateConfiguration>
