@@ -1,3 +1,9 @@
+2005-08-12  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* ILAsmConsoleProject.xpt.xml: Properly reference resource icons.
+	* ILAsmBinding.addin.xml:
+	* Makefile.am: Embed icon and templates as resources.
+
 2005-08-10  Ben Motmans  <ben.motmans@gmail.com>
 
 	* ILAsmBinding.mdp: references update
